--- a/Resume/Web.config
+++ b/Resume/Web.config
@@ -47,7 +47,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -62,6 +62,7 @@
     <add name="ResumesEntities" connectionString="metadata=res://*/Models.ResumeModel.csdl|res://*/Models.ResumeModel.ssdl|res://*/Models.ResumeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-7FFMLIJ\SQLSERVER2014;initial catalog=Resumes;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ModulesEntities" connectionString="metadata=res://*/Models.Navigation.csdl|res://*/Models.Navigation.ssdl|res://*/Models.Navigation.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-7FFMLIJ\SQLSERVER2014;initial catalog=Resumes;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="AzureNavigationEntities" connectionString="metadata=res://*/Models.AzureNavigation.csdl|res://*/Models.AzureNavigation.ssdl|res://*/Models.AzureNavigation.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=darthclarkdatabase.database.windows.net;initial catalog=Resumes;user id=rclark;password=L3titbee!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="AzureEntities" connectionString="metadata=res://*/Models.Azure.csdl|res://*/Models.Azure.ssdl|res://*/Models.Azure.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=darthclarkdatabase.database.windows.net;initial catalog=Resumes;persist security info=True;user id=rclark;password=L3titbee!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
