Completed Separation of concerns for Downloads and Home Controllers

--- a/Services/Resume.Services.csproj
+++ b/Services/Resume.Services.csproj
@@ -44,8 +44,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\ICareerHistoryService.cs" />
+    <Compile Include="Interfaces\IDownloadsService.cs" />
+    <Compile Include="Interfaces\IHomeService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CareerHistoryService.cs" />
+    <Compile Include="Repositories\DownloadsService.cs" />
+    <Compile Include="Repositories\HomeService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Resume.DAL\Resume.DAL.csproj">
