--- a/Resume.DAL/Resume.DAL.csproj
+++ b/Resume.DAL/Resume.DAL.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Interfaces\ICareerHistoryRepository.cs" />
+    <Compile Include="Interfaces\IDownloadsRepository.cs" />
+    <Compile Include="Interfaces\IHomeRepository.cs" />
     <Compile Include="Models\Azure.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -138,6 +140,8 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CareerHistoryRepository.cs" />
+    <Compile Include="Repositories\DownloadsRepository.cs" />
+    <Compile Include="Repositories\HomeRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
