--- a/Services/Resume.Services.csproj
+++ b/Services/Resume.Services.csproj
@@ -45,10 +45,12 @@
   <ItemGroup>
     <Compile Include="Interfaces\ICareerHistoryService.cs" />
     <Compile Include="Interfaces\IDownloadsService.cs" />
+    <Compile Include="Interfaces\IEducationService.cs" />
     <Compile Include="Interfaces\IHomeService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CareerHistoryService.cs" />
     <Compile Include="Repositories\DownloadsService.cs" />
+    <Compile Include="Repositories\EducationService.cs" />
     <Compile Include="Repositories\HomeService.cs" />
   </ItemGroup>
   <ItemGroup>
