--- a/Resume.DAL/Resume.DAL.csproj
+++ b/Resume.DAL/Resume.DAL.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Interfaces\IEducationRepository.cs" />
     <Compile Include="Interfaces\IHomeRepository.cs" />
     <Compile Include="Interfaces\IMenumuRepository.cs" />
+    <Compile Include="Interfaces\IQualificationsRepository.cs" />
+    <Compile Include="Interfaces\IProductsRepository.cs" />
     <Compile Include="Models\Azure.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -143,9 +145,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CareerHistoryRepository.cs" />
     <Compile Include="Repositories\DownloadsRepository.cs" />
+    <Compile Include="Repositories\QualificationsRepository.cs" />
     <Compile Include="Repositories\EducationRepository.cs" />
     <Compile Include="Repositories\HomeRepository.cs" />
     <Compile Include="Repositories\MenuRepository.cs" />
+    <Compile Include="Repositories\ProductsRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
