--- a/Services/Resume.Services.csproj
+++ b/Services/Resume.Services.csproj
@@ -48,12 +48,16 @@
     <Compile Include="Interfaces\IEducationService.cs" />
     <Compile Include="Interfaces\IHomeService.cs" />
     <Compile Include="Interfaces\IMenuService.cs" />
+    <Compile Include="Interfaces\IProductsService.cs" />
+    <Compile Include="Interfaces\IQualificationsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CareerHistoryService.cs" />
     <Compile Include="Repositories\DownloadsService.cs" />
     <Compile Include="Repositories\EducationService.cs" />
     <Compile Include="Repositories\HomeService.cs" />
+    <Compile Include="Repositories\QualificationsService.cs" />
     <Compile Include="Repositories\MenuService.cs" />
+    <Compile Include="Repositories\ProductsService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Resume.DAL\Resume.DAL.csproj">
