--- a/Resume.DAL/Resume.DAL.csproj
+++ b/Resume.DAL/Resume.DAL.csproj
@@ -178,9 +178,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ViewModels\Resume.ViewModels.csproj">
+    <ProjectReference Include="..\ViewModels\Resume.ViewModel.csproj">
       <Project>{bb73a2d2-04a1-4c55-a5ee-54f4276d422a}</Project>
-      <Name>Resume.ViewModels</Name>
+      <Name>Resume.ViewModel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
