--- a/Resume/Resume.csproj
+++ b/Resume/Resume.csproj
@@ -160,6 +160,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\accomplishments.css" />
@@ -340,9 +341,9 @@
       <Project>{bd135ba3-7981-47da-a62c-241d96d846ce}</Project>
       <Name>Resume.Services</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ViewModels\Resume.ViewModels.csproj">
+    <ProjectReference Include="..\ViewModels\Resume.ViewModel.csproj">
       <Project>{bb73a2d2-04a1-4c55-a5ee-54f4276d422a}</Project>
-      <Name>Resume.ViewModels</Name>
+      <Name>Resume.ViewModel</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
