--- a/Services/Resume.Services.csproj
+++ b/Services/Resume.Services.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Interfaces\IEducationService.cs" />
     <Compile Include="Interfaces\IHomeService.cs" />
     <Compile Include="Interfaces\IMenuService.cs" />
-    <Compile Include="Interfaces\IProductsService.cs" />
+    <Compile Include="Interfaces\IProjectsService.cs" />
     <Compile Include="Interfaces\IQualificationsService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CareerHistoryService.cs" />
@@ -57,7 +57,7 @@
     <Compile Include="Repositories\HomeService.cs" />
     <Compile Include="Repositories\QualificationsService.cs" />
     <Compile Include="Repositories\MenuService.cs" />
-    <Compile Include="Repositories\ProductsService.cs" />
+    <Compile Include="Repositories\ProjectsService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Resume.DAL\Resume.DAL.csproj">
