--- a/Resume/Web.config
+++ b/Resume/Web.config
@@ -70,4 +70,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension="woff" mimeType="application/font-woff" />
+      <mimeMap fileExtension="woff2" mimeType="application/font-woff" />
+      <mimeMap fileExtension="otf" mimeType="application/font-opentype" />
+    </staticContent>
+  </system.webServer>
 </configuration>
